add week 2 day 3 web section code

--- a/WebSection/practice/exercises/hello.html
+++ b/WebSection/practice/exercises/hello.html
@@ -8,19 +8,45 @@
             color: pink;
             background-color: black;
         }
+
+        @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hello Page</title>
 </head>
 
+<!-- <body id="noimage"> -->
+
 <body>
-    <p> Hello world 1</p>
-    <p> Hello world 2</p>
-    <p style="color:aqua; background-color: tomato;"> Hello world 3</p>
-    <p> Hello world 4</p>
-    <p> Hello world 5</p>
+    <div id="blueborder">
+        <h1>Welcome to CSS Sessions</h1>
+    </div>
+    <div class="redclass">
+        <p> Hello world 1</p>
+        <p> Hello world 2</p>
+        <p class="p2"> Hello world 3</p>
+        <p> Hello world 4</p>
+        <p> Hello world 5</p>
+        <hr>
+        <h3>List of the topics to be discussed</h3>
+        <ul>
+            <li id="oddrow">Topic 1</li>
+            <li id="evenrow">Topic 2</li>
+            <li id="oddrow">Topic 3</li>
+            <li id="evenrow">Topic 4</li>
+            <li id="oddrow">Topic 5</li>
+            <li>Topic 6</li>
+        </ul>
+    </div>
+    <div>
+        <h2>Wen Shufa2</h2>
+        <h3>Wen Shufa3</h3>
+        <h4>Wen Shufa4</h4>
+        <h5>Wen Shufa5</h5>
+    </div>
 </body>
+
 
 </html>
