--- a/WebSection/practice/myProfile/home.html
+++ b/WebSection/practice/myProfile/home.html
@@ -2,10 +2,17 @@
 <html lang="en">
 
 <head>
+    <link href="css/external.css" type="text/css" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet"> -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Table with Colors</title>
+    <title>Home Page</title>
 </head>
 
 <body>
@@ -15,19 +22,19 @@
                 <col span="1" style="width: 30%;">
                 <col span="1" style="width: 70%;">
             </colgroup> -->
-            <caption style="caption-side:bottom;">My Personal Profile</caption>
+            <caption>My Personal Profile</caption>
             <tbody align="left">
-                <tr style="background-color: rgba(38, 0, 255, 0.7);">
-                    <td colspan="2" align="center"><a href="myProfile.html"><strong>My Profile</strong></a></td>
+                <tr id="table-header">
+                    <td colspan="2" align="center"><a href="myProfile.html">My Profile</a></td>
                 </tr>
-                <tr style="background-color: rgba(38, 0, 255, 0.4);">
+                <tr id="odd-row">
                     <td><img src="../images/whatsapplogo.jfif" style="border-radius: 50%;" height="100" width="100"></img></td>
                     <td>Details: This is shufa. Hello World!</td>
                 </tr>
-                <tr style="background-color: rgba(38, 0, 255, 0.2);">
+                <tr id="even-row">
                     <td colspan="2" align="center"><strong>Home Page</strong></td>
                 </tr>
-                <tr style="background-color: rgba(38, 0, 255, 0.4);">
+                <tr id="odd-row">
                     <td>
                         <ul align="left" type="square">
                             <a href="home.html"><li>Home</li></a>
@@ -37,9 +44,9 @@
                             <a href="info.html"><li>Personal Info</li></a>
                         </ul>
                     </td>
-                    <td>This is <span style="color: rgb(255, 0, 13);"><strong>Home</strong></span> information</td>
+                    <td>This is <span class="red-text">Home</span> information</td>
                 </tr>
-                <tr style="background-color: rgba(38, 0, 255, 0.2);" align="center">
+                <tr id="even-row">
                     <td colspan="2">+6512345678 Email:example@gmail.com</td>
                 </tr>
             </tbody>
