--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -2,55 +2,72 @@
 <html lang="en">
 
 <head>
-     <link href="css/portfolio.css" type="text/css" rel="stylesheet">
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
+    <link href="css/portfolio.css" type="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
 </head>
+
 <body>
-     <div class="sidenav">
-          <a href="#aboutMe">About Me</a>
-          <a href="#java">Java</a>
-          <a href="#web">Web</a>
-          <a href="resume.html">Resume</a>
-          <a href="#contactMe">Contact Me</a>
 
-     </div>
+    <div class="sidebar">
+        <!-- <img id="icon" src="images/shufa_032022.JPG">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+        -->
 
-     <div class="sidenav-bottom">
-          <a href="#"><img src="images/github.png" title="github icons"></img></a>
-          <a href="#"><img src="images/246593_linkedin_icon.png" title="github icons"></img></a>
-     </div>
+        <nav class="nav-area">
+            <img id="icon" src="images/shufa_032022.JPG">
 
-     <div class="main">
-          <h2>About Me</h2>
-          <p>Welcom to my homepage</p>
-     </div>
+            <ul>
+                <!-- <input type="radio" name="nav-area" id="about"> -->
+                <a href="#" class="main-section">Home</a>
+                <input type="radio" name="nav-area" id="about">
+                <li>
+                    <label for="about" class="title">About</label>
+                    <a href="#" class="sub">Our History</a>
+                    <a href="#" class="sub">Our Vision</a>
+                    <a href="#" class="sub">Our Mission</a>
+                    <a href="#" class="sub">Our Goal</a>
+                </li>
+                <input type="radio" name="nav-area" id="services">
+                <li>
+                    <label for="services">Services</label>
+                    <a href="#" class="sub">Graphics Design</a>
+                    <a href="#" class="sub">Web Design</a>
+                    <a href="#" class="sub">Web Developemnt</a>
+                    <a href="#" class="sub">Digital Marketing</a>
+                </li>
+                <input type="radio" name="nav-area" id="portfolio">
+                <li>
+                    <label for="portfolio">Portfolio</label>
+                    <a href="#" class="sub">Project One</a>
+                    <a href="#" class="sub">Project Two</a>
+                    <a href="#" class="sub">Project Three</a>
+                    <a href="#" class="sub">Project Four</a>
+                </li>
+                <a href="#" class="main-section">Contact</a>
+            </ul>
+        </nav>
 
-     <div id="aboutMe" class="main">
-          <p>
-               This is the about me page
-          </p>
-     </div>
+        <div class="sidenav-bottom">
+            <a href="#"><img src="images/github.png" title="github icons"></img>
+            </a>
+            <a href="#"><img src="images/246593_linkedin_icon.png" title="github icons"></img>
+            </a>
+        </div>
+    </div>
 
-     <div id="java" class="main">
-          <p>
-               This is the list of java projects.
-          </p>
-     </div>
+    <div class="content">
+        <h2>Responsive Sidebar Example</h2>
+        <p>This example use media queries to transform the sidebar to a top navigation bar when the screen size is 700px or less.</p>
+        <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the navigation links.</p>
+        <h3>Resize the browser window to see the effect.</h3>
+    </div>
 
-     <div id="web" class="main">
-          <p>
-               This is the list of web development projects.
-          </p>
-     </div>
-
-     <div id="contactMe" class="main">
-          <p>
-               This is the contactMe details.
-          </p>
-     </div>
 </body>
 
 </html>
