update sidebar for portfolio

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -12,12 +12,6 @@
 <body>
 
     <div class="sidebar">
-        <!-- <img id="icon" src="images/shufa_032022.JPG">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-        -->
 
         <nav class="nav-area">
             <img id="icon" src="images/shufa_032022.JPG">
@@ -28,37 +22,35 @@
                 <input type="radio" name="nav-area" id="about">
                 <li>
                     <label for="about" class="title">About</label>
-                    <a href="#" class="sub">Our History</a>
-                    <a href="#" class="sub">Our Vision</a>
-                    <a href="#" class="sub">Our Mission</a>
-                    <a href="#" class="sub">Our Goal</a>
+                    <a href="#" class="sub">Education</a>
+                    <a href="#" class="sub">Working Experience</a>
+                    <a href="#" class="sub">Skills</a>
+                    <a href="#" class="sub">Goal</a>
                 </li>
                 <input type="radio" name="nav-area" id="services">
                 <li>
-                    <label for="services">Services</label>
-                    <a href="#" class="sub">Graphics Design</a>
-                    <a href="#" class="sub">Web Design</a>
-                    <a href="#" class="sub">Web Developemnt</a>
-                    <a href="#" class="sub">Digital Marketing</a>
+                    <label for="services">Java Section</label>
+                    <a href="#" class="sub">Projects</a>
+                    <a href="#" class="sub">Problems</a>
                 </li>
                 <input type="radio" name="nav-area" id="portfolio">
                 <li>
-                    <label for="portfolio">Portfolio</label>
-                    <a href="#" class="sub">Project One</a>
-                    <a href="#" class="sub">Project Two</a>
-                    <a href="#" class="sub">Project Three</a>
-                    <a href="#" class="sub">Project Four</a>
+                    <label for="portfolio">Web Section</label>
+                    <a href="#" class="sub">Projects</a>
+                    <a href="#" class="sub">Practices</a>
                 </li>
+                <a href="#" class="main-section">Resume</a>
                 <a href="#" class="main-section">Contact</a>
             </ul>
+            <div class="sidenav-bottom">
+                <a href="#"><img src="images/github.png" title="github icons"></img>
+                </a>
+                <a href="#"><img src="images/246593_linkedin_icon.png" title="github icons"></img>
+                </a>
+            </div>
         </nav>
 
-        <div class="sidenav-bottom">
-            <a href="#"><img src="images/github.png" title="github icons"></img>
-            </a>
-            <a href="#"><img src="images/246593_linkedin_icon.png" title="github icons"></img>
-            </a>
-        </div>
+
     </div>
 
     <div class="content">
