edit education section

--- a/WebSection/MyPortfolio/resume.html
+++ b/WebSection/MyPortfolio/resume.html
@@ -28,7 +28,7 @@
                 <td>
                     <span>
                         <span class="bold-left-class">Cloudsine</span>,
-                        <span id="job-title">Software Engineer - Deep Learning</span>
+                    <span id="job-title">Software Engineer - Deep Learning</span>
                     </span>
                     <span class="date-class">Jan 2022 - March 2022</span>
 
@@ -43,7 +43,7 @@
                 <td>
                     <span>
                         <span class="bold-left-class">Certis</span>,
-                        <span id="job-title">Associate, Chief Digital Office</span>
+                    <span id="job-title">Associate, Chief Digital Office</span>
                     </span>
                     <span class="date-class">Aug 2021 – Dec 2021</span>
 
@@ -58,7 +58,7 @@
                 <td>
                     <span>
                         <span class="bold-left-class">Certis</span>,
-                        <span id="job-title">Digital Office Intern (AI Chatbot, Kiosk)</span>
+                    <span id="job-title">Digital Office Intern (AI Chatbot, Kiosk)</span>
                     </span>
                     <span class="date-class">May 2021 – Aug 2021</span>
 
@@ -73,7 +73,7 @@
                 <td>
                     <span>
                         <span class="bold-left-class">Autodesk</span>,
-                        <span id="job-title">Intern Automation (Delivery Platform)</span>
+                    <span id="job-title">Intern Automation (Delivery Platform)</span>
                     </span>
                     <span class="date-class">May 2020 – Nov 2020</span>
                     <ul>
@@ -99,9 +99,7 @@
                     <span class="date-class">Aug 2018 – Dec 2021</span>
 
                     <ul>
-                        <li><span>Deep learning to detect cyber attacks and anomalies</span></li>
-                        <li><span>Data cleaning to get quality training data</span></li>
-                        <li><span>Image comparison to find the potential web defacement</span></li>
+                        <li><span>Bachelor of Computing (Computer Science) with Honours (Merit)</span></li>
                     </ul>
                 </td>
             </tr>
@@ -118,8 +116,7 @@
                     <ul class="skill-class-ul">
                         <li><span class="bold-left-class">Language:</span><span class="skill-class">Java, python,
                                 SQL</span></li>
-                        <li><span class="bold-left-class">Libraries, Frameworks, and Tools:</span><span
-                                class="skill-class">Django, Node.js, PostgreSQL, GitHub, Jenkins, CI/CD, Heroku</span>
+                        <li><span class="bold-left-class">Libraries, Frameworks, and Tools:</span><span class="skill-class">Django, Node.js, PostgreSQL, GitHub, Jenkins, CI/CD, Heroku</span>
                         </li>
                     </ul>
                 </td>
