--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -18,7 +18,6 @@
             <img id="icon" src="images/shufa_032022.JPG">
 
             <ul>
-                <!-- <input type="radio" name="nav-area" id="about"> -->
                 <a href="#home" class="main-section">Home</a>
                 <input type="radio" name="nav-area" id="about">
                 <li>
@@ -40,7 +39,7 @@
                     <a href="#web-project" class="sub">Projects</a>
                     <a href="#web-practice" class="sub">Practices</a>
                 </li>
-                <a href="resume.html" class="main-section">Resume</a>
+                <a href="#resume" class="main-section">Resume</a>
                 <a href="#contactMe" class="main-section">Contact</a>
             </ul>
             <div class="sidenav-bottom">
@@ -53,14 +52,11 @@
     </div>
 
     <div class="content">
-        <!-- <h2>Responsive Sidebar Example</h2>
-        <p>This example use media queries to transform the sidebar to a top navigation bar when the screen size is 700px or less.</p>
-        <p>We have also added a media query for screens that are 400px or less, which will vertically stack and center the navigation links.</p>
-        <h3>Resize the browser window to see the effect.</h3> -->
         <div id="home" class="main">
-            <p>
-                This is the home page
+            <p class="center">
+                My name is Wen Shufa. My goal is to pursue this passion within the field of web development.
             </p>
+
         </div>
         <div id="aboutMe" class="main">
             <p>
@@ -77,14 +73,12 @@
                     <tr>
                         <td>
                             <span>
-                            <span class="bold-left-class">National University of Singapore (NUS)</span>
+                                <span class="bold-left-class">National University of Singapore (NUS)</span>
                             </span>
                             <span class="date-class">Aug 2018 – Dec 2021</span>
 
                             <ul>
-                                <li><span>Deep learning to detect cyber attacks and anomalies</span></li>
-                                <li><span>Data cleaning to get quality training data</span></li>
-                                <li><span>Image comparison to find the potential web defacement</span></li>
+                                <li><span>Bachelor of Computing (Computer Science) with Honours (Merit)</span></li>
                             </ul>
                         </td>
                     </tr>
@@ -92,7 +86,7 @@
                 </table>
             </div>
             <div id="work">
-                <p>This is working Experience</p>
+                <p class="center">This is working Experience</p>
             </div>
             <div id="skills">
                 <p>This is skills page</p>
@@ -125,16 +119,20 @@
                 <p>This is practice page</p>
             </div>
         </div>
+        <div id="resume" class="main">
 
+            <iframe src="resume.html" title="My resume" width=100% height=100%></iframe>
+
+
+        </div>
         <div id="contactMe" class="main">
             <p>
                 This is the contactMe details.
+
             </p>
         </div>
 
-
     </div>
-
 </body>
 
 </html>
