fix small size bar padding issue

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -53,8 +53,12 @@
 
     <div class="content">
         <div id="home" class="main">
-            <p class="center">
-                My name is Wen Shufa. My goal is to pursue this passion within the field of web development.
+            <!-- My name is Wen Shufa. My goal is to pursue this passion within the field of web development. -->
+            <p id="name">
+                I'm Shufa
+            </p>
+            <p id="jobTitle">
+                <em>Java Developer and Software Engineer</em>
             </p>
 
         </div>
