done home section

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -19,14 +19,14 @@
 
             <ul>
                 <a href="#home" class="main-section">Home</a>
-                <input type="radio" name="nav-area" id="about">
+                <!-- <input type="radio" name="nav-area" id="about">
                 <li>
                     <label for="about" class="title">About</label>
                     <a href="#education" class="sub">Education</a>
                     <a href="#work" class="sub">Working Experience</a>
                     <a href="#skills" class="sub">Skills</a>
                     <a href="#goal" class="sub">Goal</a>
-                </li>
+                </li> -->
                 <input type="radio" name="nav-area" id="services">
                 <li>
                     <label for="services">Java Section</label>
@@ -53,16 +53,18 @@
 
     <div class="content">
         <div id="home" class="main">
-            <!-- My name is Wen Shufa. My goal is to pursue this passion within the field of web development. -->
-            <p id="name">
-                I'm Shufa
-            </p>
-            <p id="jobTitle">
-                <em>Java Developer and Software Engineer</em>
-            </p>
-
+            <!-- <img src="images/hacker.webp" alt="HH1 image missing" style="height: 100%; width: 100%; position: relative;"> -->
+            <div>
+                <!-- My name is Wen Shufa. My goal is to pursue this passion within the field of web development. -->
+                <p id="name">
+                    I'm Shufa
+                </p>
+                <p id="jobTitle">
+                    <em>Java Developer and Software Engineer</em>
+                </p>
+            </div>
         </div>
-        <div id="aboutMe" class="main">
+        <!-- <div id="aboutMe" class="main">
             <p>
                 This is the about me page
             </p>
@@ -98,7 +100,7 @@
             <div id="goal">
                 <p>This is skills page</p>
             </div>
-        </div>
+        </div> -->
 
         <div id="java" class="main">
             <p>
@@ -130,10 +132,10 @@
 
         </div>
         <div id="contactMe" class="main">
-            <p>
-                This is the contactMe details.
-
-            </p>
+            <h2><span>Contact Me</span></h2>
+            <p>Location: Singapore</p>
+            <p>Phone: +65 87271745</p>
+            <p>Email: shufa17@gmail.com</p>
         </div>
 
     </div>
