--- a/WebSection/practice/js learning/demo.html
+++ b/WebSection/practice/js learning/demo.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <noscript>
+        Please enable JavaScript in the setting
+    </noscript>
+    <h1>JavaScript Practice</h1>
+
 
 </body>
 
@@ -191,4 +196,177 @@
         document.write(a + " is a odd Number");
     }
     document.write("<br>");
+
+    var mark = 61;
+    if (mark > 85) {
+        document.write("GradeA");
+        document.write("<br>");
+    } else if (mark > 70 && mark <= 85) {
+        document.write("GradeB");
+        document.write("<br>");
+    } else if (mark > 60 && mark <= 70) {
+        document.write("GradeC");
+        document.write("<br>");
+    } else if (mark > 45 && mark <= 60) {
+        document.write("GradeD");
+        document.write("<br>");
+    } else {
+        document.write("GradeE");
+        document.write("<br>");
+    }
+
+    var day = 1;
+    switch (day) {
+        case 1:
+            document.write("Monday");
+            break;
+        case 2:
+            document.write("Tuesday");
+            break;
+        case 3:
+            document.write("Wednesday");
+            break;
+        case 4:
+            document.write("Thursday");
+            break;
+        case 5:
+            document.write("Friday");
+            break;
+        case 6:
+            document.write("Saturday");
+            break;
+        case 7:
+            document.write("Sunday");
+            break;
+        default:
+            document.write("Unknown");
+    }
+    document.write("<br>");
+    document.write("<hr>");
+    for (var i = 0; i < 10; i++) {
+        document.write(i);
+        document.write("<br>");
+    }
+    // print number from 1 -30, 
+    // /3: fizz
+    // /5: buzz
+    // /3 /5: fizzbuzz
+    document.write("<hr>");
+    document.write("hackerrank problem1");
+    document.write("<br>");
+    var i = 1;
+    while (i <= 30) {
+        if (i % 3 == 0 && i % 5 == 0) {
+            document.write("fizzbuzz");
+        } else if (i % 3 == 0) {
+            document.write("fizz");
+
+        } else if (i % 5 == 0) {
+            document.write("buzz");
+        } else {
+            document.write(i);
+
+        }
+        document.write("<br>");
+        i++;
+    }
+    document.write("<hr>");
+    var skills = [
+        "HyperTextMarkupLanguage",
+        "CascadingStyleSheet",
+        "JavaScript"
+    ];
+
+    for (var n of skills) {
+        document.write(n);
+        document.write("<br>");
+    }
+
+    for (var n in skills) {
+        document.write(n);
+        document.write("<br>");
+    }
+    document.write("<hr>");
+
+    var skillsDic = {
+        html: "HyperTextMarkupLanguage",
+        css: "CascadingStyleSheet",
+        js: "JavaScript"
+    }
+
+
+    for (var n in skillsDic) {
+        document.write(n + ": ");
+        document.write(skillsDic[n]);
+
+        document.write("<br>");
+    }
+    document.write("<hr>");
+    // alert("This is a alert Box, \nThis is a alert Box,This is a alert Box,\nThis is a alert Box");
+    // var choice = confirm("Do you want to confirm payment");
+    // document.write(choice);
+    // document.write("<hr>");
+
+    // var name = prompt("Enter a name");
+    // document.write(name);
+    // document.write("<br>");
+
+
+    // var defaultName = "shufa";
+    // var defaultPassword = "shufa";
+    // if (name == "shufa") {
+    //     while (true) {
+    //         var password = prompt("Enter your password");
+    //         document.write(password);
+    //         document.write("<br>");
+    //         if (password == defaultPassword) {
+    //             alert("successfully login");
+    //             document.write("successfully login");
+    //             document.write("<br>");
+    //             break;
+    //         }
+    //     }
+    // } else {
+    //     alert("your name is wrong");
+    //     document.write("your name is wrong");
+    //     document.write("<br>");
+    // }
+
+    // document.write("<hr>");
+    // var num = prompt("Enter a integer number:");
+    // try {
+    //     alert(eval(num));
+    //     alert("Successful entered a integer number!");
+    // } catch (e) {
+    //     alert("Pls enter a number, not other data");
+    // }
+    // if (true) {
+    //     var varVariable = "false";
+    // }
+    // document.write("varVariable: " + varVariable + "<br>");
+
+
+
+    // if (true) {
+    //     let letVariable = "false";
+    //     document.write("letVariable : " + letVariable + "<br>");
+
+    // }
+
+
+    var x = 5;
+    console.log("before the if condition with x=" + x);
+
+    if (true) {
+        console.log("enter if condition");
+
+        const consVariable = "false";
+        document.write("consVariable : " + consVariable + "<br>");
+        console.log("exit the if condition");
+
+
+    }
+    console.log("after the if condition");
+
+    document.write("<hr>");
 </script>
