redirect resume to resume link

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -39,7 +39,7 @@
                     <a href="#web-project" class="sub">Projects</a>
                     <a href="#web-practice" class="sub">Practices</a>
                 </li>
-                <a href="#resume" class="main-section">Resume</a>
+                <a href="resume.html" class="main-section">Resume</a>
                 <a href="#contactMe" class="main-section">Contact</a>
             </ul>
             <div class="sidenav-bottom">
@@ -125,12 +125,12 @@
                 <p>This is practice page</p>
             </div>
         </div>
-        <div id="resume" class="main">
+        <!-- <div id="resume" class="main">
 
             <iframe src="resume.html" title="My resume" width=100% height=100%></iframe>
 
 
-        </div>
+        </div> -->
         <div id="contactMe" class="main">
             <h2><span>Contact Me</span></h2>
             <p>Location: Singapore</p>
