add some projects

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -64,44 +64,6 @@
                 </p>
             </div>
         </div>
-        <!-- <div id="aboutMe" class="main">
-            <p>
-                This is the about me page
-            </p>
-
-            <div id="education">
-                <table id="education-table">
-                    <tr id="education">
-                        <td>
-                            <p id="main-section">Education</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span>
-                                <span class="bold-left-class">National University of Singapore (NUS)</span>
-                            </span>
-                            <span class="date-class">Aug 2018 – Dec 2021</span>
-
-                            <ul>
-                                <li><span>Bachelor of Computing (Computer Science) with Honours (Merit)</span></li>
-                            </ul>
-                        </td>
-                    </tr>
-
-                </table>
-            </div>
-            <div id="work">
-                <p class="center">This is working Experience</p>
-            </div>
-            <div id="skills">
-                <p>This is skills page</p>
-            </div>
-            <div id="goal">
-                <p>This is skills page</p>
-            </div>
-        </div> -->
-
         <div id="java" class="main">
             <p>
                 This is the list of java projects.
@@ -115,22 +77,49 @@
         </div>
 
         <div id="web" class="main">
-            <p>
-                This is the list of web development projects.
-            </p>
+
             <div id="web-project">
                 <p>This is project page</p>
             </div>
+
+            <section class="projects" id="projects">
+                <h2 class="projects-title">Some of my Recent Projects</h2>
+                <div class="projects-container">
+                    <div class="project-container project-card">
+                        <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                        <h3 class="project-title">My Resume</h3>
+                        <p class="project-details">
+                            This is my resume description
+                        </p>
+                        <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                    </div>
+                    <hr>
+                    <div class="project-container project-card">
+                        <img src="images/sportsActivitieService.PNG" alt="netflic-clone" loading="lazy" class="project-pic" />
+                        <h3 class="project-title">Sports Activities Service</h3>
+                        <p class="project-details">
+                            This is my Sports Activities Service description
+
+                        </p>
+                        <p>
+                            <a href="#" target="_blank" class="project-link">Check it Out</a>
+                        </p>
+
+                    </div>
+                    <!-- <div class="project-container project-card">
+                        <img src="assets/images/greenyEarth.png" alt="greeny-earth" loading="lazy" class="project-pic" />
+                        <h3 class="project-title">Greeny Earth</h3>
+                        <p class="project-details">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas ratione vel inventore labore commodi modi quos culpa aut saepe! Alias!
+                        </p>
+                        <a href="#" target="_blank" class="project-link">Check it Out</a>
+                    </div> -->
+                </div>
+            </section>
             <div id="web-practice">
                 <p>This is practice page</p>
             </div>
         </div>
-        <!-- <div id="resume" class="main">
-
-            <iframe src="resume.html" title="My resume" width=100% height=100%></iframe>
-
-
-        </div> -->
         <div id="contactMe" class="main">
             <h2><span>Contact Me</span></h2>
             <p>Location: Singapore</p>
