change the image format and grid 3 divs in one row

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -80,6 +80,28 @@
 
             <div id="web-project">
                 <p>This is project page</p>
+                <div class="wrapper">
+                    <div>One
+                        <div class="project-container project-card">
+                            <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">My Resume</h3>
+                            <p class="project-details">
+                                This is my resume description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <div>Two</div>
+                    <div>Three</div>
+                    <div>Four
+                        <br>This cell
+                        <br>Has extra
+                        <br>content.
+                        <br>Max is auto
+                        <br>so the row expands.
+                    </div>
+                    <div>Five</div>
+                </div>
             </div>
 
             <section class="projects" id="projects">
