remove extra parts

--- a/WebSection/sportsActivities/contactus.html
+++ b/WebSection/sportsActivities/contactus.html
@@ -21,33 +21,29 @@
 
         <tr>
             <td>
-                <p align="center"><img src="images/contact/contactus.jpg" alt="HH1 image missing" width="2048" height="1080">
+                <p align="center"><img src="images/contact/contactus.jpg" alt="HH1 image missing" width="80%" height="1080">
                 </p>
-                <h3 align="center">Food retailer Ahold Delhaize includes supermarkets, convenience stores, online delivery services
-                    and specialty stores. Spanning Europe, the United States and Indonesia, the company’s overall business is
-                    serving some 50 million retail customers a week, and growing.</h3>
+                <h3 align="center">Food retailer Ahold Delhaize includes supermarkets, convenience stores, online delivery services and specialty stores. Spanning Europe, the United States and Indonesia, the company’s overall business is serving some 50 million retail customers
+                    a week, and growing.</h3>
             </td>
             <td>
                 <table>
                     <tr>
                         <td>
 
-                            <a href="https://wa.me/6587271745"><img src="images/contact/whatsapplogo.jfif" width="100"
-                                    height="100" style="border-radius: 50%; margin-bottom: 50px;"></a>
+                            <a href="https://wa.me/6587271745"><img src="images/contact/whatsapplogo.jfif" width="100" height="100" style="border-radius: 50%; margin-bottom: 50px;"></a>
                         </td>
 
                     </tr>
                     <tr>
                         <td>
 
-                            <a href="https://t.me/woon17"><img src="images/contact/telegram.png" width="100" height="100"
-                                    style="border-radius: 50%; margin-bottom: 50px;"></a>
+                            <a href="https://t.me/woon17"><img src="images/contact/telegram.png" width="100" height="100" style="border-radius: 50%; margin-bottom: 50px;"></a>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <a href="mailto:mail@example.com"><img src="images/contact/gmail.png" width="100" height="100"
-                                    style="border-radius: 50%; margin-bottom: 50px;"></a>
+                            <a href="mailto:mail@example.com"><img src="images/contact/gmail.png" width="100" height="100" style="border-radius: 50%; margin-bottom: 50px;"></a>
                         </td>
                     </tr>
 
@@ -55,10 +51,18 @@
 
             </td>
         </tr>
+        <tr>
+            <td>
+                <div align="center">
+                    <iframe id="inlineFrameExample" title="Inline Frame Example" width="80%" height="1000" src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
+                    </iframe>
+                </div>
+            </td>
+        </tr>
 
     </table>
 
-    
+
 </body>
 
 </html>
