--- a/WebSection/sportsActivities/home.html
+++ b/WebSection/sportsActivities/home.html
@@ -23,22 +23,15 @@
     <img src="images/home.jpg" alt="HH1 image missing" style="height: 100%; width: 100%;">
 
     <h2 align="center"><em><strong>Welcom to XYZ sports</strong></em></h2>
-    <iframe style="height: 100%; width: 100%;" src="https://www.youtube.com/embed/60ItHLz5WEA"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe><br>
+    <iframe style="height: 100%; width: 100%;" src="https://www.youtube.com/embed/60ItHLz5WEA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
     <!-- <margee>Hello</marqee> -->
-    <div align="center">
-        <iframe id="inlineFrameExample" title="Inline Frame Example" width="1000" height="1000"
-            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
-        </iframe>
-    </div>
-    
-    <div align="center">
+
+
+    <!-- <div align="center">
         <iframe src="../practice/docs/safe-workplaces.pdf" height="1000" width="1000">
         </iframe>
-    </div>
+    </div> -->
 </body>
 
 </html>
