--- a/WebSection/sportsActivities/joinusform.html
+++ b/WebSection/sportsActivities/joinusform.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <style>
+        p,
+        label {
+            size: 700px;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +20,7 @@
         <h1 style="color:rgb(7, 7, 7)" align="center"><u>Welcome to be part of XYZ sports</u><br></h1>
     </em>
     <hr>
+
     <p align="right" style="margin-right: 40px;">
         <a href="home.html" style="margin-right: 10px;">Home</a>
         <a style="margin-right: 10px;"> > </a>
@@ -22,12 +29,13 @@
     <!-- <div align="center"> -->
     <form action="success.html" style="text-align: left;">
         <table align="center">
-            <caption><h3 style="color:blue">Job Application Form</h3></caption>
+            <caption>
+                <h3 style="color:blue">Job Application Form</h3>
+            </caption>
             <tr>
                 <td>
                     <div style="margin-bottom: 10px;">
-                        <lable>First Name: </lable><input type="text" name="firstname"
-                            placeholder="Enter the first name" required><br>
+                        <lable>First Name: </lable><input type="text" name="firstname" placeholder="Enter the first name" required><br>
                     </div>
                 </td>
             </tr>
@@ -35,8 +43,7 @@
 
                 <td>
                     <div style="margin-bottom: 10px;">
-                        <lable style="margin-right: 2px;">Last Name: </lable><input type="text" name="lastname"
-                            placeholder="Enter the last name" required><br>
+                        <lable style="margin-right: 2px;">Last Name: </lable><input type="text" name="lastname" placeholder="Enter the last name" required><br>
                     </div>
                 </td>
             </tr>
@@ -44,8 +51,7 @@
 
                 <td>
                     <div style="margin-bottom: 10px;">
-                        <lable style="margin-right: 44px;">City: </lable><input type="text" name="city"
-                            placeholder="Enter the City" required><br>
+                        <lable style="margin-right: 44px;">City: </lable><input type="text" name="city" placeholder="Enter the City" required><br>
                     </div>
                 </td>
             </tr>
@@ -53,7 +59,7 @@
                 <td>
                     <p><strong>Are you married?</strong></p>
                     <lable for="my">Yes</lable>
-                    <input type="radio" id="my" name="married" value="my"  style="margin-right: 30px;" required>
+                    <input type="radio" id="my" name="married" value="my" style="margin-right: 30px;" required>
                     <lable for="mn">No</lable>
                     <input type="radio" id="mn" name="married" value="mn">
                     <br>
@@ -64,7 +70,7 @@
                 <td>
 
                     <p><strong>Which role u want to apply?</strong></p>
-                    
+
                     <input type="checkbox" name="status" value="frontend">
                     <label for="frontend">frontend</label><br>
                     <input type="checkbox" name="status" value="backend">
